--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
           <img src="Sliderimg.jpeg" class="img-fluid rounded shadow imghovr" alt="Gallery Image 1">
         </div>
         <div class="col-sm-6 col-md-4">
-          <img src="Sliderimg15.jpeg" class="img-fluid rounded shadow imghovr" alt="Gallery Image 2">
+          <img src="sliderimg15.jpeg" class="img-fluid rounded shadow imghovr" alt="Gallery Image 2">
         </div>
         <div class="col-sm-6 col-md-4">
           <img src="Sliderimg10.jpeg" class="img-fluid rounded shadow imghovr" alt="Gallery Image 3">
