--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 alt="Gallery Image 1">
             </div>
             <div class="carousel-item">
-              <img src="Sliderimg15.jpeg" class="d-block w-100 object-fit-cover" style="height: 250px;"
+              <img src="sliderimg15.jpeg" class="d-block w-100 object-fit-cover" style="height: 250px;"
                 alt="Gallery Image 2">
             </div>
             <div class="carousel-item">
