--- a/index.html
+++ b/index.html
@@ -525,10 +525,10 @@
 
       <!-- Bottom -->
       <hr>
-      <div class="text-center small" style="color: #444;">
-        © 2025 <strong style="color: #801336;">13D RanSangram</strong> | Crafted with legacy at <strong>Panhala
-          Fort</strong>
-      </div>
+     <div class="text-center small" style="color: #444;">
+  © 2025 <strong style="color: #801336;">13D RanSangram</strong> | Developed by <strong>Vishvajeet Khopkar</strong>
+</div>
+
     </div>
   </footer>
 
